fix timer-select button on smaller screens

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -51,7 +51,6 @@
     color: $color-neutral-100;
     display: grid;
     opacity: .5;
-    place-items: center;
 
     &:is(:hover, :focus) {
       opacity: 1;
